--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 /* Base Styles
 =====================================*/
 html {
-	background-image: url(images/timeForLogo.png);
+	background-image: url(images/timeForBackground.png);
 	background-size: 100% 100%;
     background-repeat: no-repeat;
     min-width:960px;
